# images-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: env.py  settings.py  urls.py
images_api/images/: models.py  serializers.py  utils.py  views.py
images_api/images/migrations/: 0001_image_model.py
tests/: test_images.py
